--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "stackmorelayers"
-version = "0.0.6"
+version = "0.0.7"
 description = "My personal ML library"
 authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
 repository = "https://github.com/andrewsonin/stackmorelayers"
@@ -8,21 +8,19 @@ homepage = "https://github.com/andrewsonin/stackmorelayers"
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-numpy = "^1.21"
-pandas = "^1.3.3"
+python = ">=3.10,<3.11"
+numpy = "^1.21.4"
+pandas = "^1.3.4"
 matplotlib = "^3.4.3"
-scikit-learn = "^1.0"
-lightgbm = "^3.2.1"
-catboost = "^1.0"
-statsmodels = "^0.12.2"
+scikit-learn = "^1.0.1"
+catboost = "^1.0.3"
 tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
-ipython = "^7.28.0"
+ipython = "^7.29.0"
 jupyter = "^1.0.0"
-jupyterlab = "^3.1.13"
-mypy = ">=0.910"
+jupyterlab = "^3.2.3"
+mypy = "^0.910"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools>=57"]
